fixed money tab alignment

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -6,5 +6,5 @@
 #profile-video { display: none; width: 100%; height: auto; }
 #profile-snapshot { display: none; width: 100%; height: auto; }
 .logo {padding: 40px;}
-.vcard { width: 300px; margin-right: 1em; }
+.vcard { width: 250px; margin-right: 1em; }
 .vcard .vcard-photo { font-size: 50px; line-height: 50px; }
